--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,11 @@ venv.bak/
 .mypy_cache/
 
 # End of https://www.gitignore.io/api/python
+
+# Created by https://www.gitignore.io/api/VisualStudioCode
+
+### VisualStudioCode ###
+.vscode/*
+.history
+
+# End of https://www.gitignore.io/api/VisualStudioCode
